--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas": "^2.6.1",
     "koa": "^2.11.0",
     "koa-logger": "^3.2.1",
+    "koa-proxies": "^0.11.0",
     "pg": "^8.2.1",
     "winston": "^3.2.1"
   },
